test/input/negative/valid_lambda.ls
// Valid Lambda script for testing
let x = 42
let y = "hello"
let z = [1, 2, 3]
let data = {name: "test", value: 100}

// Function definition
fn add(a, b) {
    a + b
}

// Conditional
let result = if (x > 0) "positive" else "negative"
